@@ -11,6 +11,7 @@ import java.io.IOException;
 
 /**
  * JavaFX App Class, does nothing besides basic window setup and fxml switching
+ * java --module-path "C:\Program Files\Java\javafx-sdk-20.0.1\lib" --add-modules javafx.controls,javafx.fxml -jar minesweeper.jar
  */
 public class App extends Application {
 
